# ti_mac_coprocessor_host

./: CMakeLists.txt  README.md  main.c  mcp.c  mcp.h  mcp_host.c  mcp_host.cmake  mcp_host.h  mcp_host_tests.c  osal_port.h  osal_posix.c  posix_coprocessor_host.c
2_4g/: ti_154stack_features.h
combo/: ti_154stack_features.h
mac/: api_mac.h  mac_util.c  mac_util.h
mt/: mt.c  mt.h  mt_ext.c  mt_ext.h  mt_mac.c  mt_mac.h  mt_pkt.h  mt_rpc.h  mt_sys.c  mt_sys.h  mt_util.c  mt_util.h
npi/: npi_data.h  npi_frame.h  npi_frame_mt.c
npi/src/: npi_client_mt.c  npi_frame_mt.c  npi_rxbuf.c  npi_task.c  npi_tl.c  npi_tl_spi.c  npi_tl_uart.c
npi/src/inc/: npi_client.h  npi_config.h  npi_frame.h  npi_rxbuf.h  npi_task.h  npi_tl.h  npi_tl_spi.h  npi_tl_uart.h
osal_port/: osal_port.h
